-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1, Qt Creator 3.3.0-rc1
-
Windows 7 64 bit
Qt 5.3.2, Qt 5.4.0
cdb
- Make sure that "Use tooltips in main editor while debugging" is set.
- Stop at a breakpoint.
- Hover over a variable.
A tooltip shows up. - Switch to a different application.
The tooltip will stay in the way.
When Creator goes into background, the tooltip should, too.
- relates to
-
QTCREATORBUG-12369 Memory view stays in the way when sending Creator to background
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-13397 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 99916,2 | Debugger: Make pinned tooltips a frameless Tool window | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 148346,4 | Utils: Hide tooltip if application becomes inactive | master | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
| 151631,2 | Utils: Hide tooltip if application becomes inactive | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |