Debugger: Make pinned tooltips a frameless Tool window

This avoids the "StayOnTop" situation described in QTCREATORBUG-13397
for the case of pinned tooltips.

Task-number: QTCREATORBUG-13397
Change-Id: I3801368c07895b652e10fe1d173b21cef7869ed0
Reviewed-by: hjk <hjk121@nokiamail.com>